--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.reactome.web</groupId>
-    <artifactId>fireworksJs</artifactId>
+    <artifactId>fireworks-js</artifactId>
     <packaging>war</packaging>
     <version>1.3.4-SNAPSHOT</version>
     <name>Reactome Fireworks Viewer JS</name>
@@ -197,6 +197,14 @@
                 <artifactId>maven-deploy-plugin</artifactId>
                 <extensions>true</extensions>
                 <version>2.8.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
             </plugin>
 
         </plugins>
