--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
   <!-- RESTFul WS PROXY Configuration (ONLY USED IN DEV MODE) -->
   <servlet>
     <servlet-name>ReactomeRESTfulAPI</servlet-name>
-    <servlet-class>uk.ac.ebi.pride.web.util.servlet.proxy.ProxyServlet</servlet-class>
+    <servlet-class>org.reactome.server.utils.proxy.ProxyServlet</servlet-class>
     <init-param>
       <param-name>proxyHost</param-name>
       <!--<param-value>localhost</param-value>-->
@@ -30,10 +30,6 @@
       <param-name>proxyPath</param-name>
       <param-value>/ReactomeRESTfulAPI/RESTfulWS</param-value>
     </init-param>
-    <!--<init-param>-->
-    <!--<param-name>maxFileUploadSize</param-name>-->
-    <!--<param-value></param-value>-->
-    <!--</init-param>-->
   </servlet>
   <servlet-mapping>
     <servlet-name>ReactomeRESTfulAPI</servlet-name>
@@ -43,7 +39,7 @@
   <!-- RESTFul WS PROXY Configuration (ONLY USED IN DEV MODE) -->
   <servlet>
     <servlet-name>ReactomeAnalysis</servlet-name>
-    <servlet-class>uk.ac.ebi.pride.web.util.servlet.proxy.ProxyServlet</servlet-class>
+    <servlet-class>org.reactome.server.utils.proxy.ProxyServlet</servlet-class>
     <init-param>
       <param-name>proxyHost</param-name>
       <!--<param-value>localhost</param-value>-->
@@ -70,10 +66,10 @@
   <!-- Please note a "reactome" user (or a symlink) needs to be set up -->
   <servlet>
     <servlet-name>DiagramProxy</servlet-name>
-    <servlet-class>uk.ac.ebi.pride.web.util.servlet.proxy.StaticFilesProxyServlet</servlet-class>
+    <servlet-class>org.reactome.server.utils.proxy.StaticFilesProxyServlet</servlet-class>
     <init-param>
       <param-name>proxyFilePath</param-name>
-      <param-value>/Users/reactome/diagram/static</param-value>
+      <param-value>/Users/reactome/Reactome/diagram/static</param-value>
     </init-param>
   </servlet>
   <servlet-mapping>
@@ -84,7 +80,7 @@
   <!-- Reactome IMAGES (ONLY USED IN DEV MODE) -->
   <servlet>
     <servlet-name>FiguresProxy</servlet-name>
-    <servlet-class>uk.ac.ebi.pride.web.util.servlet.proxy.ProxyServlet</servlet-class>
+    <servlet-class>org.reactome.server.utils.proxy.ProxyServlet</servlet-class>
     <init-param>
       <param-name>proxyHost</param-name>
       <param-value>www.reactome.org</param-value>
