--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <groupId>org.reactome.web</groupId>
     <artifactId>fireworks-js</artifactId>
     <packaging>war</packaging>
-    <version>1.3.4-SNAPSHOT</version>
+    <version>${fireworks-gwt}</version>
     <name>Reactome Fireworks Viewer JS</name>
 
     <description>
@@ -38,6 +38,8 @@
         <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <fireworks-gwt>1.3.7</fireworks-gwt>
 
         <appModule>org.reactome.web.fireworks</appModule>
         <appName>${appModule}</appName>
@@ -74,7 +76,7 @@
         <dependency>
             <groupId>org.reactome.web</groupId>
             <artifactId>fireworks</artifactId>
-            <version>1.3.4</version>
+            <version>${fireworks-gwt}</version>
         </dependency>
 
         <dependency>
@@ -102,21 +104,6 @@
         <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
 
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <excludes>
-                        <!-- Here we exclude the packages and files that we do NOT want to add to the jar file -->
-                        <!-- This excludes are either for deprecated modules or test components -->
-                        <exclude>**/test/**</exclude>
-                        <exclude>**/WidgetTest.*</exclude>
-                        <!--<exclude>**/*.java</exclude>-->
-                    </excludes>
-                </configuration>
-            </plugin>
-
             <plugin>
                 <groupId>net.ltgt.gwt.maven</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
@@ -159,7 +146,6 @@
                 </configuration>
             </plugin>
 
-
             <!-- Copy static web files before executing gwt:run -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -176,20 +162,6 @@
                 <configuration>
                     <webappDirectory>${webappDirectory}</webappDirectory>
                 </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>2.4</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
 
             <plugin>
