--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,18 @@
 
     <developers>
         <developer>
+            <id>ksidiro</id>
+            <name>Kostas Sidiropoulos</name>
+            <email>ksidiro@ebi.ac.uk</email>
+            <organization>http://www.ebi.ac.uk/</organization>
+        </developer>
+        <developer>
+            <id>gviteri</id>
+            <name>Guilherme Viteri</name>
+            <email>gviteri@ebi.ac.uk</email>
+            <organization>http://www.ebi.ac.uk/</organization>
+        </developer>
+        <developer>
             <id>fabregat</id>
             <name>Antonio Fabregat</name>
             <email>fabregat@ebi.ac.uk</email>
@@ -30,7 +42,7 @@
     </developers>
 
     <properties>
-        <gwtVersion>2.8.1</gwtVersion>
+        <gwtVersion>2.8.2</gwtVersion>
         <gwtStyle>OBF</gwtStyle> <!-- OBF | PRETTY | DETAILED -->
 
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -39,7 +51,7 @@
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <fireworks-gwt>1.8.3</fireworks-gwt>
+        <fireworks-gwt>1.8.6</fireworks-gwt>
 
         <appModule>org.reactome.web.fireworks</appModule>
         <appName>${appModule}</appName>
