--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <groupId>org.reactome.web</groupId>
     <artifactId>fireworks-js</artifactId>
     <packaging>war</packaging>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <name>Fireworks Viewer JS</name>
 
     <description>
@@ -48,7 +48,7 @@
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <fireworks.web.version>2.0.0-SNAPSHOT</fireworks.web.version>
+        <fireworks.web.version>2.0.0</fireworks.web.version>
         <gwt.exporter.version>2.4.0</gwt.exporter.version>
 
 
