--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,7 @@
     <build>
         <!-- Generate compiled stuff in the folder used for developing mode -->
         <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
-
+        <finalName>FireworksJs.war</finalName>
         <plugins>
             <plugin>
                 <groupId>net.ltgt.gwt.maven</groupId>
