--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,14 @@
     <groupId>org.reactome.web</groupId>
     <artifactId>fireworks-js</artifactId>
     <packaging>war</packaging>
-    <version>2.0.0</version>
+    <version>2.0.1</version>
     <name>Fireworks Viewer JS</name>
+
+    <parent>
+        <groupId>org.reactome.server</groupId>
+        <artifactId>reactome-pwp-parent</artifactId>
+        <version>1.0.0</version>
+    </parent>
 
     <description>
         A genome-wide, hierarchical visualisation of Reactome pathways in a space-filling graph
@@ -17,7 +23,7 @@
 
     <organization>
         <name>The European Bioinformatics Institute</name>
-        <url>http://www.ebi.ac.uk/</url>
+        <url>https://www.ebi.ac.uk/</url>
     </organization>
 
     <developers>
@@ -29,7 +35,7 @@
             <id>gviteri</id>
             <name>Guilherme Viteri</name>
             <email>gviteri@ebi.ac.uk</email>
-            <organization>http://www.ebi.ac.uk/</organization>
+            <organization>https://www.ebi.ac.uk/</organization>
         </developer>
         <developer>
             <id>fabregat</id>
@@ -38,7 +44,7 @@
     </developers>
 
     <properties>
-        <gwtVersion>2.9.0</gwtVersion>
+
         <gwtStyle>OBF</gwtStyle> <!-- OBF | PRETTY | DETAILED -->
         <jetty.runner.version>9.4.41.v20210516</jetty.runner.version>
 
@@ -48,26 +54,10 @@
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <fireworks.web.version>2.0.0</fireworks.web.version>
-        <gwt.exporter.version>2.4.0</gwt.exporter.version>
-
-
         <appModule>org.reactome.web.fireworks</appModule>
         <appName>${appModule}</appName>
-        <slf4j.version>1.7.22</slf4j.version>
-    </properties>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>com.google.gwt</groupId>
-                <artifactId>gwt</artifactId>
-                <version>${gwtVersion}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -110,7 +100,6 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-runner</artifactId>
-            <version>${jetty.runner.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -122,13 +111,11 @@
         <dependency>
             <groupId>org.reactome.web</groupId>
             <artifactId>fireworks</artifactId>
-            <version>${fireworks.web.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.timepedia.exporter</groupId>
             <artifactId>gwtexporter</artifactId>
-            <version>${gwt.exporter.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -136,24 +123,22 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-nop</artifactId>
-            <version>${slf4j.version}</version>
         </dependency>
     </dependencies>
 
     <build>
         <!-- Generate compiled stuff in the folder used for developing mode -->
         <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
-        <finalName>FireworksJs.war</finalName>
+        <finalName>FireworksJs</finalName>
         <plugins>
             <plugin>
                 <groupId>net.ltgt.gwt.maven</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
-                <version>1.0-rc-6</version>
+                <version>${gwt.maven.version}</version>
                 <executions>
                     <execution>
                         <goals>
@@ -196,7 +181,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>3.3.1</version>
+                <version>${maven.war.version}</version>
                 <executions>
                     <execution>
                         <phase>compile</phase>
@@ -214,16 +199,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <extensions>true</extensions>
-                <version>2.8.2</version>
+                <version>${maven.deploy.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
             </plugin>
 
         </plugins>
@@ -233,7 +213,7 @@
             <extension>
                 <groupId>org.apache.maven.wagon</groupId>
                 <artifactId>wagon-ssh</artifactId>
-                <version>2.3</version>
+                <version>${wagon.ssh.version}</version>
             </extension>
         </extensions>
     </build>
